--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.servlet.encoding.charset=UTF-8
 
 logging.level.web=DEBUG
 logging.level.pl.interview.users=DEBUG
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.datasource.url=jdbc:h2:file:./bazaDanych
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
