--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,6 @@
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -68,6 +67,16 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>4.1</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>net.sourceforge.javacsv</groupId>-->
+<!--			<artifactId>javacsv</artifactId>-->
+<!--			<version>2.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
